cluster/apps/monitoring/loki/route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: loki
  namespace: monitoring
spec:
  parentRefs:
    - name: nginx-internal
      namespace: nginx-gateway
      sectionName: loki-https
  hostnames:
    - loki.k3s.i.${DOMAIN}
  rules:
    - backendRefs:
        - name: loki-loki-distributed-gateway
          port: 80
